tests/snapshots/snapshot_tests__fasta_circular_wrap.snap
---
source: tests/snapshot_tests.rs
expression: content
---
>NZ_CP012345.1:27F_1492R_wrap:1	pos=4990-15	strand=+	len=20
AGAGTTTGATCATGGCTCAG
