tests/snapshots/snapshot_tests__fasta_forward_strand.snap
---
source: tests/snapshot_tests.rs
expression: content
---
>NZ_CP012345.1:27F_1492R:1	pos=100-120	strand=+	len=20
AGAGTTTGATCATGGCTCAG
