tests/snapshots/snapshot_tests__fasta_long_sequence.snap
---
source: tests/snapshot_tests.rs
expression: content
---
>NZ_CP012345.1:27F_1492R:1	pos=100-200	strand=+	len=100
ACGTACGTACGTACGTACGTACGTACGTACGTACGTACGTACGTACGTACGTACGTACGTACGTACGTACGTACGTACGT
ACGTACGTACGTACGTACGT
